adicinando a versao beta 0.1
