# docs/swagger.json
@@ -61,7 +61,7 @@
                 }
             }
         },
-        "/rapido": {
+        "/upload": {
             "post": {
                 "security": [
                     {
@@ -107,7 +107,7 @@
                 }
             }
         },
-        "/ultrarapido": {
+        "/upload_semindex": {
             "post": {
                 "security": [
                     {
